--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.adp4j</groupId>
+	<artifactId>adp4j</artifactId>
+	<name>adp4j</name>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
@@ -88,8 +90,11 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9.1</version>
+			</plugin>
 		</plugins>
 	</build>
-	<artifactId>adp4j</artifactId>
-	<name>adp4j</name>
 </project>
