--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.adp4j</groupId>
+	<groupId>com.labelscans</groupId>
 	<artifactId>adp4j</artifactId>
 	<name>adp4j</name>
 	<version>0.0.1-SNAPSHOT</version>
