--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.github.drapostolos</groupId>
@@ -196,8 +195,8 @@
 		</license>
 	</licenses>
 	<scm>
-		<connection>scm:git:https://github.com/drapostolos/adp4j.git</connection>
-		<developerConnection>scm:git:https://github.com/drapostolos/adp4j.git</developerConnection>
-		<url>https://github.com/drapostolos/adp4j.git</url>
+		<connection>scm:git:git@github.com/drapostolos/adp4j.git</connection>
+		<developerConnection>scm:git:git@github.com/drapostolos/adp4j.git</developerConnection>
+		<url>git@github.com/drapostolos/adp4j.git</url>
 	</scm>
 </project>
