--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.github.drapostolos</groupId>
 	<artifactId>adp4j</artifactId>
 	<name>adp4j</name>
-	<version>0.0.2</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<url>http://maven.apache.org</url>
